--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Sahil Wadhwa
 
 # Short description of your site
-description: An artificially intelligent
+description: Expectation of human distribution
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
