--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Sahil Wadhwa
 
 # Short description of your site
-description: Expectation of human distribution
+description: Expectation of a human distribution
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -25,9 +25,9 @@ navbar-links:
   #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #   - Learn markdown: "http://www.markdowntutorial.com/"
   # Author's home: "http://deanattali.com"
-  Machine Learning: "#"
-  Statistics: "#"
-  DSA: "#"
+  Resume: "resume"
+  # Statistics: "#"
+  # DSA: "#"
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/img/me_2.jpg"
