--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #   - Learn markdown: "http://www.markdowntutorial.com/"
   # Author's home: "http://deanattali.com"
-  Resume: "resume_ml.pdf"
+  Resume: "resume_sahil_thd.pdf"
   # Statistics: "#"
   # DSA: "#"
 # Image to show in the navigation bar - image must be a square (width = height)
